--- a/src/components/Navbar/Newsletter.css
+++ b/src/components/Navbar/Newsletter.css
@@ -69,6 +69,7 @@
   @media (max-width: 600px) {
     .body1 {
       margin-top: 15vh;
+      margin-left: 1vh;
     }
   
     .heading1 {
@@ -85,14 +86,14 @@
     }
   
     .heading3 {
-      margin-left: 0;
+      margin-left: 5vh;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
   
     .heading4 {
-      margin-left: 0;
+      margin-left: -7vh;
       margin-top: 1vh;
     }
   }
