--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,19 +1,21 @@
-body {
-  background: #92b1df;
-  background-size: cover;
-}
+/* LandingPage.css */
 
 .text-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin-top: 15vh;
+  text-align: center;
+  margin-top: 50px;
+  height: 70vh;
 }
-
+#line-homepage{
+  margin-top: -5vh;
+}
 .main-heading {
   font-family: "Gilroy-bold"; 
-  font-size: 4vw;
+  font-size: 48px;
+  margin-top: 20vh;
+  margin-bottom: 20px;
   color: black;
 }
 
@@ -23,13 +25,6 @@ body {
   font-size: 4vw;
   color: #2176F6;
   font-family: "Gilroy-semibold";
-}
-
-.typed-out {
-  white-space: nowrap;
-  overflow: hidden;
-  display: inline-block;
-  font: bold;
 }
 
 .cursor {
@@ -46,85 +41,51 @@ body {
   }
 }
 
+.button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-bottom: 20vh;
+}
+
 #space-button1 {
+  margin-top: 30px;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
   background-color: #0056b3;
   color: white;
   font-family: "Gilroy-semibold";
   padding: 2.3vh 2vw;
   border-radius: 50px;
-  justify-items: center;
-  margin-left: 42%;
-  margin-top: 10vh;
-  margin-bottom: 10vh;
-  align-self: center;
+  align-items: center;
+  justify-content: center;
 }
 
-#space-button1:hover {
-  background-color: #37b6ff;
-}
-
-#line-homepage {
-  margin-top: 2vh;
-  width: 120%;
-}
-
-
-
-@media  (max-width: 600px) {
-  .text-container {
-    font-weight: 500;
-    margin-top: 10vh;
-    overflow: hidden;
-  }
-
+@media (max-width: 600px) {
   .main-heading {
-    margin-left: 2vw;
-    margin-top: 12vh;
     font-size: 8vw;
   }
 
   .typed-out-container {
-    font-size: 12vw;
+    font-size: 8vw;
   }
 
-  #line-homepage {
-    height: 10vh;
-    margin-left: 1vh;
-    width: 100vw;
-    overflow: hidden;
+  #line-homepage{
+    margin-top: -20vw;
   }
 
   #space-button1 {
-    margin-left: 13vh;
-    align-items: center;
-    justify-content: center;
-    margin-top: 18vh;
-    padding: 2vh 2vh;
-  }
-}
-
-@media (min-width: 601px) and (max-width: 768px) {
-  .text-container {
-    margin-top: 20vh;
-  }
-
-  .main-heading {
-    font-size: 6vw;
-  }
-
-  .typed-out-container {
-    font-size: 6vw;
-  }
-
-  #line-homepage {
-    margin-left: 1vh;
-    width: 100vw;
-    overflow-x: hidden;
-  }
-
-  #space-button1 {
-    margin-left: 40%;
-    margin-top: 15vh;
-    padding: 2.3vh 3vw;
+    margin-top: 30px;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  background-color: #0056b3;
+  color: white;
+  font-family: "Gilroy-semibold";
+  padding: 2.3vh 2vw;
+  border-radius: 50px;
+  align-items: center;
+  justify-content: center;
   }
 }
