--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -61,7 +61,7 @@
 
 @media (min-width:0px) and (max-width:600px) {
     .wrapper {
-        display: flex;
+        display: none;
         flex-direction: column;
         align-items: center;
         justify-content: center;
