--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 30px;
   height: 70vh;
 }
 #line-homepage{
@@ -15,7 +15,8 @@
 }
 .main-heading {
   font-family: "Gilroy-bold"; 
-  font-size: 48px;
+  font-weight: 900;
+  font-size: 64px;
   margin-top: 20vh;
   margin-bottom: 20px;
   color: black;
@@ -26,7 +27,8 @@
   align-items: center;
   font-size: 4vw;
   color: #2176F6;
-  font-family: "Gilroy-semibold";
+  font-family: "Gilroy-bold";
+  font-weight: 900;
 }
 
 .cursor {
@@ -57,11 +59,15 @@
   cursor: pointer;
   background-color: #0056b3;
   color: white;
-  font-family: "Gilroy-semibold";
+  font-family: "Gilroy-bold";
   padding: 2.3vh 2vw;
   border-radius: 50px;
   align-items: center;
   justify-content: center;
+}
+
+#space-button1:hover{
+  background-color: #37B6FF;
 }
 
 @media (max-width: 600px) {
@@ -78,7 +84,7 @@
   }
 
   #space-button1 {
-    margin-top: 30px;
+  margin-top: 30px;
   padding: 10px 20px;
   font-size: 18px;
   cursor: pointer;
