--- a/src/components/LandingPage/footer/footer.css
+++ b/src/components/LandingPage/footer/footer.css
@@ -22,6 +22,12 @@
 
 .footer-column h3 {
   margin-bottom: 10px;
+  font-family: "Gilroy-bold";
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; /* 155.556% */
+letter-spacing: 0.25px;
 }
 
 .footer-column ul {
@@ -31,8 +37,18 @@
 
 .footer-column ul li {
   margin-bottom: 8px;
+  align-items: center;
+justify-content: center;
 }
-
+.footer-column li{
+font-family: Montserrat;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; 
+align-items: center;
+justify-content: center;
+}
 .footer-bottom {
   display: flex;
   flex-direction: column;
@@ -52,10 +68,13 @@
 
 .footer-description {
   font-size: 16px;
-  font-family: 'Manrope-Regular';
   text-align: center;
   margin-bottom: 20px;
   max-width: 800px;
+  font-family: "Montserrat-med";
+font-style: normal;
+font-weight: 500;
+line-height: 24px;
 }
 
 .footer-social {
@@ -73,13 +92,22 @@
   justify-content: center;
   margin-bottom: 20px;
   flex-wrap: wrap; /* Ensure elements wrap by default */
+  font-family: "Montserrat-med";
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; /* 150% */
 }
 
 .footer-links a {
   margin: 0 10px;
-  font-size: 14px;
   text-decoration: none;
   color: black;
+  font-family: "Montserrat-med";
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; /* 150% */
 }
 
 .footer-links a:hover {
@@ -89,6 +117,11 @@
 .footer-copyright {
   font-size: 14px;
   text-align: center;
+  font-family: Montserrat;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px;
 }
 
 @media (max-width: 768px) {
