--- a/src/components/LandingPage/section2/section2.css
+++ b/src/components/LandingPage/section2/section2.css
@@ -26,24 +26,33 @@
   padding: 20px;
 }
 
-.para2 {
-  font-size: 24px;
-  margin-bottom: 10px; /* Reduced margin */
+.para2 {  
+  margin-bottom: 10px; 
+  font-family: "Montserrat-med";
+  font-weight: 600;
+  font-family: Montserrat;
+font-size: 14px;
+font-style: normal;
+font-weight: 600;
+line-height: 16px;
 }
 
 .heading-2 .title {
   font-size: 32px;
-  margin-bottom: 10px; /* Reduced margin */
+  margin-bottom: 10px; 
+  font-family: "Manrope";
+  font-weight: 600;
 }
 
 .title-blue {
-  color: blue;
+  color: #2176F6;
 }
 
 .para .main-para {
-  font-size: 18px;
+  font-size: 16px;
   margin-bottom: 10px; /* Reduced margin */
   line-height: 1.4; /* Adjust line height */
+  font-family: "Montserrat-med";
 }
 
 .subscribe-section {
@@ -56,6 +65,10 @@
   font-size: 18px;
   color: black;
   text-decoration: none;
+  font-family: Montserrat;
+font-style: normal;
+font-weight: 600;
+line-height: 16px;
 }
 
 .arrow-icon {
