--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -105,7 +105,9 @@
         font-weight: 900;
 
       }
-      
+      .heading_help{
+        display: none;
+      }
       .description {
         flex-grow: 1;
         padding-left: 5vh; /* Remove padding-left for centering */
