--- a/src/components/LandingPage/OfferPage/Offer.css
+++ b/src/components/LandingPage/OfferPage/Offer.css
@@ -19,7 +19,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: 16px;
-  text-align: left; 
+  text-align: center; 
   margin-left: 0; 
   padding-left: 0;
   width: 100%;
