--- a/src/components/LandingPage/FAQ/FAQ.css
+++ b/src/components/LandingPage/FAQ/FAQ.css
@@ -27,18 +27,22 @@ body {
     font-weight: 600;
     font-size: 20px;
     margin-bottom: 10px;
-    margin-left: 40vh;
+    margin-left: 38vh;
 }
 
 .accordion-container {
     text-align: start;
     padding: 5px;
+    font-size: 18px;
+font-style: normal;
     border-radius: 10px;
     margin-bottom: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     max-width: 120vh;
     margin: 0 auto;
     margin-bottom: 5vh;
+    font-family: "Gilroy-semibold";
+    font-weight: 400;
 }
 
 .accordion {
